# webspark

./: .coveragerc  .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test-and-release.yml
examples/: README.md  auth_example.py  basic_api.py  config_example.py  cookies_example.py  cors_example.py  database_example.py  file_upload_example.py  plugins_example.py  schema_example.py  schema_plugin_example.py
tests/contrib/: test_cors.py
tests/contrib/plugins/: test_allowed_hosts.py  test_auth.py  test_cors.py  test_schema.py
tests/core/: test_path.py  test_router.py  test_schema.py  test_trierouter.py  test_views.py  test_views_schema_validation.py  test_wsgi.py
tests/http/: test_context.py  test_cookie.py  test_multipart.py  test_request.py  test_response.py
tests/schema/: test_schema.py
tests/utils/: test_apply.py  test_decorators.py  test_env.py  test_exceptions.py  test_json.py
webspark/: __init__.py  constants.py
webspark/contrib/: cors.py
webspark/contrib/plugins/: __init__.py  allowed_hosts.py  cors.py  schema.py  token_auth.py
webspark/core/: __init__.py  plugin.py  router.py  schema.py  trierouter.py  views.py  wsgi.py
webspark/http/: __init__.py  context.py  cookie.py  multipart.py  request.py  response.py
webspark/schema/: __init__.py  fields.py  helpers.py  object_schema.py
webspark/utils/: __init__.py  decorators.py  env.py  exceptions.py  json.py
webspark/validation/: fields.py  helpers.py  schema.py
