[project]
name = "webspark"
version = "0.1.0"
description = "A lightweight and minimalist Python web framework for building fast WSGI applications and APIs."
authors = [
  {name = "Lucas Santana", email = "lsfratel@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
  "ruff>=0.12.8",
  "gunicorn>=23.0.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
test = "pytest --cov=webspark"

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
]

line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "C4",
  "UP",
]

ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["webspark"]
